# Coursework_1

./: .env.example  .flake8  .gitignore  README.md  main.py  pyproject.toml
data/: operations.xlsx
src/: data_import.py  external_api.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_data_import.py  test_external_api.py  test_reports.py  test_services.py  test_utils.py  test_views.py
